--- a/css/responsive1.css
+++ b/css/responsive1.css
@@ -435,7 +435,7 @@ margin-top: 5px;
     .three-dots{
         display:block;
         font-size: 37px !important;
-            color: #fff!important;
+            color: #fff;
         }
     .sidenav a {
         padding: 0px 8px 0 32px;
@@ -847,7 +847,7 @@ font-family: inherit;
 .three-dots{
     display:block;
     font-size: 32px !important;
-    color: #fff!important;
+    color: #fff;
 }
 .main-about {
     padding-bottom: 53px;
