--- a/css/responsive1.css
+++ b/css/responsive1.css
@@ -433,7 +433,7 @@ margin-top: 5px;
         display:block;
     }
     .three-dots{
-        display:block!important;
+        display:block;
         font-size: 37px !important;
             color: #fff;
         }
@@ -845,7 +845,7 @@ font-family: inherit;
     margin-right: 61px;
 }
 .three-dots{
-   display:block!important;
+   display:block;
     font-size: 32px !important;
     color: #fff;
 }
