--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ a{
 .body{
     background-color: #141010;
 }
+.res-dot .material-symbols-rounded{
+	display:none;
+}
 .justify-center{
 	justify-content: center;
 }
