--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a{
 .body{
     background-color: #141010;
 }
-.res-dot .material-symbols-rounded{
+.material-symbols-rounded{
 	display:none!important;
 }
 .justify-center{
