--- a/css/responsive1.css
+++ b/css/responsive1.css
@@ -433,7 +433,7 @@ margin-top: 5px;
         display:block;
     }
     .three-dots{
-        display:block;
+        display:block!important;
         font-size: 37px !important;
             color: #fff;
         }
@@ -848,7 +848,7 @@ font-family: inherit;
     margin-right: 61px;
 }
 .three-dots{
-   display:block;
+  display:block!important;
     font-size: 32px !important;
     color: #fff;
 }
